# Desktop-Pets

./: LICENSE  README.md  main.py  pyproject.toml
pet/: __init__.py  ball.py  base_pet.py  factory.py  full_pet.py  protocols.py  simple_pet.py  state.py
tests/: test_database.py  test_pets.py
ui/: __init__.py  ball_widget.py  pet_window.py  settings.py  stats_widget.py  tray_manager.py
utils/: __init__.py  database.py  i18n.py  paths.py  sprite_loader.py
